fix: code review fixes - Windows compatibility, safety, and robustness
- DistCpExecutor: fix Windows hadoop.cmd path, add HADOOP_HOME validation
- MigrationState: return immutable map to prevent external modification
- MigrationResult: use -1 for unset endTime, handle in getDurationMs()
- CompatibilityTransformer: deep copy HiveColumn objects in clone
- HiveMetadataExtractor/Importer: fix race condition in isConnected()
- ReportGenerator: use UTF-8 charset for HTML reports
- JsonStateManager: persist state immediately on initialize()
- Main: implement maxFailedTasks tracking, fix comment numbering
- Main: use configurable externalTablePath, use actual location from metadata
- DistCpExecutorTest: mock Hadoop home for cross-platform testing
- README: add Known Limitations section, externalTablePath config

See README Known Limitations for DistCp non-atomicity and HADOOP_HOME trust notes.